Added topic management to api

--- a/src/Content.Pipeline.Creator.WebApi/Content.Pipeline.Creator.WebApi.csproj
+++ b/src/Content.Pipeline.Creator.WebApi/Content.Pipeline.Creator.WebApi.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Content.Pipeline.Creator.Clients\Content.Pipeline.Creator.Clients.csproj" />
     <ProjectReference Include="..\Content.Pipeline.Creator.Core\Content.Pipeline.Creator.Core.csproj" />
   </ItemGroup>
 
